# ultimaDSEcaller

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CITATION.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  USAGE.md
.github/workflows/: ci.yml  pages.yml  release.yml
benches/: pipeline.rs
containers/: README.md  ultimadsecaller.def
docs/: index.html
example/: README.md  run_example.sh
example/nextflow/: make_fastq.py
example/scripts/: make_synthetic.py
nextflow/: README.md  main.nf  nextflow.config
nextflow/modules/: minimap2_align.nf  star_align.nf  star_index.nf  ultimadse.nf
src/: advanced.rs  annotation.rs  cache.rs  cli.rs  config.rs  consensus.rs  embedding.rs  error.rs  events.rs  formula.rs  glm.rs  junctions.rs  lib.rs  longread.rs  main.rs  motif.rs  output.rs  pdf.rs  pileup.rs  progress.rs  protein.rs  quantify.rs  report.rs  report_template.html  sashimi.rs  stats.rs
tests/: integration_basic.rs  property_tests.proptest-regressions  property_tests.rs
